// example file
enum Corpus {
  A = 0;
  B = 1;
}
message Test {
  map<string, uint32> data2 = 7;
  required string hello = 2;
  oneof test {
    uint32 age = 3;
    uint32 year = 4;
  }
  oneof sample {
    string hula = 5;
    uint32 world = 6;
  }
  message Nested {
    optional bytes thing = 1;
  }
  repeated Corpus corpus = 8;
  repeated bytes foo = 9;
  enum Corpus {
    option allow_alias = true;
    UNIVERSAL = 0;
    WEB = 1;
    NET = 1;
    IMAGES = 2;
    LOCAL = 3;
    NEWS = 4;
    PRODUCTS = 5;
    VIDEO = 6;
  }
  Test2 bar = 10;
  Test3 baz = 11;
  message Test3 {
    uint32 some = 1;
  }
}

message Test2 {
  Corpus corpus = 1;
}
